# AFT_rs485

serial_rs485/: CMakeLists.txt  LICENSE.txt  README.md  README.txt  package.xml  setup.cfg  setup.py
serial_rs485/serial_rs485/: connect_signal_rs485.py  listener.py
serial_rs485/src/: connect_signal_rs485.py  listener_rs485.py
